@@ -8,4 +8,10 @@ addii: new identifier
 
 5
 "t_CLOSURE"
+  ***   not an ulong: GDL0,U,
+  ***                   ^-----
+  ***   not a long: GDL0,L,
+  ***                 ^-----
+  ***   not an ulong: GD-1,U,
+  ***                   ^-----
 Total time spent: 0
