@@ -7,3 +7,7 @@ kill(addii)
 install(addiu,"GD0,U,")
 addiu(2,3)
 type(addiu)
+\\ ERRORS
+install(addiu,"GDL0,U,")
+install(addiu,"GDL0,L,")
+install(addiu,"GD-1,U,")
