@@ -194,6 +194,7 @@ AP  60- improve bnfisprincipal in fields of large degree (test more small
     62- bnrisprincipal(bnr,1) no longer needs a bnr with generators
         (from bnrinit(,1)). Added flag 4 analogous to bnfisprincipal (compact
         representation of principal part)
+    63- added sanity checks when parsing default args in 'install' prototypes
 
   Added
      1- new GP function rootsof1
